# python-web-hw-10

./: pyproject.toml
hw_project/: migrations.py  utils.py
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/: models.py  urls.py  views.py
hw_project/quotes/migrations/: 0001_initial.py
hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  author.html  base.html
hw_project/users/: models.py
hw_project/users/migrations/: 0001_initial.py  0002_alter_profile_avatar.py
hw_project/users/templates/users/: password_reset_complete.html
